# kdev-python

./: .gitignore  CMakeLists.txt  DESIGN  kdevpythonversion.h.cmake  org.kde.kdev-python.metainfo.xml
codecompletion/: context.cpp  helpers.cpp
duchain/: CMakeLists.txt  contextbuilder.cpp  declarationbuilder.cpp  declarationbuilder.h  expressionvisitor.cpp  expressionvisitor.h  helpers.cpp  helpers.h  usebuilder.cpp
duchain/declarations/: classdeclaration.cpp  classdeclaration.h  functiondeclaration.h
duchain/tests/: CMakeLists.txt  enamlduchaintest.cpp  enamlduchaintest.h  pyduchaintest.cpp
parser/: .enaml_asttransformer.cpp.kate-swp  CMakeLists.txt  ast.cpp  ast.h  astbuilder.cpp  astdefaultvisitor.cpp  asttransformer.cpp  astvisitor.cpp  cython_asttransformer.cpp  cython_asttransformer.h  cython_grammar.h  cython_parser.h  enaml_ast.cpp  enaml_ast.h  enaml_asttransformer.cpp  enaml_asttransformer.h  enaml_grammar.h  enaml_parser.h  enaml_rangefixvisitor.cpp  enaml_rangefixvisitor.h  python_asttransformer.cpp  python_asttransformer.h  python_grammar.h  python_parser.h  rangefixvisitor.cpp  rangefixvisitor.h
parser/tests/: CMakeLists.txt  pyasttest.cpp  pyasttest.h  pycythontest.cpp  pycythontest.h  pyenamltest.cpp  pyenamltest.h
po/zh_CN/: kdevpython.po
